// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Constant Evaluator should fail division-by-zero 1`] = `
"Line 3, col 22:
  2 |     handle JOIN {
> 3 |         let x: int = 1 / 0;
                           ^~~~~
  4 |     }

ConstantEvaluationError: Division by zero"
`;

exports[`Generator should generate augmented-assignment 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "x",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "0",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DIVIDE",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "INCREMENT",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "DECREMENT",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "MULTIPLY",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "DIVIDE",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "MyHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate booleans 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "0",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$0",
              "value": "%stat.player/$y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "0",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$6",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%stat.player/$$5%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate counter 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "counter",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate counter-arithmetics 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%stat.player/$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$7%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate counter-arithmetics-with-var 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%stat.global/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%stat.player/$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$9",
              "value": "%stat.player/$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$9",
              "value": "%stat.player/$$8%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%stat.player/$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$3%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate counter-arithmetics2 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "-1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$5%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate counter-arithmetics3 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "3",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%stat.global/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$5",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$6",
              "value": "4",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%stat.player/$$5%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$9",
              "value": "%stat.player/$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$9",
              "value": "%stat.player/$$8%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$9%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate global-and-player-stats 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "x",
        "y",
        "z",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.global/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.global/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.global/z%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$2",
              "value": "%stat.player/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$3",
              "value": "%stat.player/$$2%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$3",
              "value": "%stat.player/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$4",
              "value": "%stat.player/z%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$a",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.global/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.global/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.global/z%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$b",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.player/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.player/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/z%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$c",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.global/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.player/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$d",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.global/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.global/y%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.global/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.player/y%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "y",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.player/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.player/y%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "z",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "123",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "123",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "x",
              "value": "%stat.player/$$0%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "MyHouse",
      "playerStats": [
        "x",
        "y",
        "z",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate if-elseif-elseif-else 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%stat.player/$$0%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$1",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$1",
                  "value": "1",
                },
              ],
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$1",
                  "value": "1",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$0",
                  "value": "2",
                },
                {
                  "conditions": [
                    {
                      "kind": "PLAYER_STAT",
                      "mode": "EQUAL",
                      "stat": "$y",
                      "value": "%stat.player/$$0%",
                    },
                  ],
                  "else": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$1",
                      "value": "0",
                    },
                  ],
                  "kind": "CONDITIONAL",
                  "matchAny": false,
                  "then": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$1",
                      "value": "1",
                    },
                  ],
                },
                {
                  "conditions": [
                    {
                      "kind": "PLAYER_STAT",
                      "mode": "EQUAL",
                      "stat": "$$1",
                      "value": "1",
                    },
                  ],
                  "else": [
                    {
                      "conditions": [
                        {
                          "kind": "PLAYER_STAT",
                          "mode": "EQUAL",
                          "stat": "$z",
                          "value": "1",
                        },
                      ],
                      "else": [
                        {
                          "kind": "CHANGE_PLAYER_STAT",
                          "mode": "SET",
                          "stat": "$$0",
                          "value": "40",
                        },
                        {
                          "kind": "CHANGE_GLOBAL_STAT",
                          "mode": "SET",
                          "stat": "counter",
                          "value": "%stat.player/$$0%",
                        },
                      ],
                      "kind": "CONDITIONAL",
                      "matchAny": false,
                      "then": [
                        {
                          "kind": "CHANGE_PLAYER_STAT",
                          "mode": "SET",
                          "stat": "$$0",
                          "value": "30",
                        },
                        {
                          "kind": "CHANGE_GLOBAL_STAT",
                          "mode": "SET",
                          "stat": "counter",
                          "value": "%stat.player/$$0%",
                        },
                      ],
                    },
                  ],
                  "kind": "CONDITIONAL",
                  "matchAny": false,
                  "then": [
                    {
                      "kind": "CHANGE_PLAYER_STAT",
                      "mode": "SET",
                      "stat": "$$0",
                      "value": "20",
                    },
                    {
                      "kind": "CHANGE_GLOBAL_STAT",
                      "mode": "SET",
                      "stat": "counter",
                      "value": "%stat.player/$$0%",
                    },
                  ],
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$0",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%stat.player/$$0%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate if-statements 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "%stat.player/$x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$0",
              "value": "%stat.player/$y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "7",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$0",
                  "value": "%stat.player/$$1%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$2",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$2",
                  "value": "1",
                },
              ],
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$2",
                  "value": "1",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$0",
                  "value": "20",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%stat.player/$$0%",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$0",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%stat.player/$$0%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate integer-comparisons 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "5",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$x",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$y",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$z",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "4",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "GREATER_THAN",
                  "stat": "$x",
                  "value": "%stat.player/$$0%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$1",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$1",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$2",
              "value": "3",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "LESS_THAN",
                  "stat": "$y",
                  "value": "%stat.player/$$2%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$3",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$3",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$4",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$4",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$5",
              "value": "%stat.player/$$1%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$5",
              "value": "%stat.player/$$3%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$4",
              "value": "%stat.player/$$5%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "LESS_THAN_OR_EQUAL",
                  "stat": "$x",
                  "value": "%stat.player/$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$6",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$7",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$7",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$8",
              "value": "%stat.player/$$4%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$8",
              "value": "%stat.player/$$6%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$7",
              "value": "%stat.player/$$8%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "GREATER_THAN_OR_EQUAL",
                  "stat": "$x",
                  "value": "%stat.player/$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$9",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$9",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$10",
              "value": "%stat.player/$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$10",
              "value": "%stat.player/$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$11",
              "value": "%stat.player/$$7%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$11",
              "value": "%stat.player/$$9%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$10",
              "value": "%stat.player/$$11%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%stat.player/$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$12",
                  "value": "0",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$12",
                  "value": "1",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$13",
              "value": "%stat.player/$$10%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$13",
              "value": "%stat.player/$$12%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$14",
              "value": "%stat.player/$$10%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$14",
              "value": "%stat.player/$$12%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$13",
              "value": "%stat.player/$$14%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$x",
                  "value": "%stat.player/$y%",
                },
              ],
              "else": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$15",
                  "value": "1",
                },
              ],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$15",
                  "value": "0",
                },
              ],
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$16",
              "value": "%stat.player/$$13%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$16",
              "value": "%stat.player/$$15%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$17",
              "value": "%stat.player/$$13%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$17",
              "value": "%stat.player/$$15%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "DECREMENT",
              "stat": "$$16",
              "value": "%stat.player/$$17%",
            },
            {
              "conditions": [
                {
                  "kind": "PLAYER_STAT",
                  "mode": "EQUAL",
                  "stat": "$$16",
                  "value": "1",
                },
              ],
              "else": [],
              "kind": "CONDITIONAL",
              "matchAny": false,
              "then": [
                {
                  "kind": "CHANGE_PLAYER_STAT",
                  "mode": "SET",
                  "stat": "$$0",
                  "value": "10",
                },
                {
                  "kind": "CHANGE_GLOBAL_STAT",
                  "mode": "SET",
                  "stat": "counter",
                  "value": "%stat.player/$$0%",
                },
              ],
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate multiple-houses 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "x",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/x%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "x",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "House1",
      "playerStats": [],
    },
    {
      "globalStats": [
        "y",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "2",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/y%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "MULTIPLY",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "y",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "QUIT",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "House2",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate player-stat 1`] = `
{
  "houses": [
    {
      "globalStats": [],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.player/counter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "counter",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "counter",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate two-counters 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "joinCounter",
        "quitCounter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/joinCounter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "joinCounter",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
        {
          "actions": [
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$0",
              "value": "1",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "SET",
              "stat": "$$1",
              "value": "%stat.global/quitCounter%",
            },
            {
              "kind": "CHANGE_PLAYER_STAT",
              "mode": "INCREMENT",
              "stat": "$$1",
              "value": "%stat.player/$$0%",
            },
            {
              "kind": "CHANGE_GLOBAL_STAT",
              "mode": "SET",
              "stat": "quitCounter",
              "value": "%stat.player/$$1%",
            },
          ],
          "event": "QUIT",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [],
    },
  ],
  "kind": "module",
}
`;
